tests/baselines/reference/wideningTuples5.errors.txt
tests/cases/conformance/types/tuple/wideningTuples5.ts(1,6): error TS7031: Binding element 'a' implicitly has an 'any' type.
tests/cases/conformance/types/tuple/wideningTuples5.ts(1,9): error TS7031: Binding element 'b' implicitly has an 'any' type.


==== tests/cases/conformance/types/tuple/wideningTuples5.ts (2 errors) ====
    var [a, b] = [undefined, null];
         ~
!!! error TS7031: Binding element 'a' implicitly has an 'any' type.
            ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.